# OxideCast

./: .env.example  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.sh  config.toml  docker-compose.yml  nginx.conf  streaming-server.service
migrations/: 20250603065327_initial.sql
src/: auth.rs  config.rs  database.rs  hls_server.rs  main.rs  multicast.rs  rtmp_server.rs  stream_manager.rs  transcoder.rs  webrtc_server.rs
src/api/: auth.rs  errors.rs  mod.rs  stats.rs  streams.rs  viewers.rs
statis/: index.html  player.html
