[package]
name = "oxide-cast"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
futures = "0.3"
bytes = "1.0"
ffmpeg-next = { version = "7.0" }
webrtc = "0.11"
m3u8-rs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
flume = "0.11"
socket2 = { version = "0.5", features = ["all"] }
rtmp = "0.3"
h264-reader = "0.7"
rtp = "0.11"
sdp = "0.6"
once_cell = "1.19"
rand = "0.8"
async-trait = "0.1"
ring = "0.17"
base64 = "0.22"
mime = "0.3"
tempfile = "3.8"

[dependencies.rocket_db_pools]
version = "0.1"
features = ["sqlx_postgres"]